<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_add_new_call"
        android:icon="@drawable/ic_add_black_48dp"
        android:id="@+id/add_new_call_btn"
        app:showAsAction="ifRoom">
    </item>
    <item android:title="@string/menu_theme_choice"
        android:id="@+id/menu_theme_btn"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item android:title="@string/menu_clear_all"
        android:id="@+id/menu_clear_all_btn"
        app:showAsAction="never">
    </item>
    <item android:title="@string/menu_notif_hist"
        android:id="@+id/notif_hist_btn"
        app:showAsAction="never">
    </item>
    <item android:title="@string/menu_settings"
        android:id="@+id/menu_settings_btn"
        app:showAsAction="never">
    </item>
    <item android:title="@string/menu_about"
        android:id="@+id/about_btn"
        app:showAsAction="never">
    </item>
</menu>