<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="groovinchip.com.callmanager.ReminderActivity">

    <EditText
        android:id="@+id/dateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/CR_date_placeholder"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_above="@+id/timeField"
        android:layout_toEndOf="@+id/dateField"
        android:layout_marginStart="10dp"
        android:drawableStart="@drawable/ic_date_pick"
        style="@style/Widget.AppCompat.Button.Small" />

    <EditText
        android:id="@+id/timeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dateField"
        android:layout_below="@+id/dateField"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/CR_time_placeholder" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_alignBottom="@+id/timeField"
        android:layout_alignStart="@+id/datePicker"
        android:drawableStart="@drawable/ic_time_pick"
        style="@style/Widget.AppCompat.Button.Small" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelBtn"
        android:text="@string/CR_cancel"
        android:layout_below="@+id/timeField"
        android:layout_alignStart="@+id/timeField"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CR_save"
        android:layout_alignBaseline="@+id/cancelBtn"
        android:layout_alignBottom="@+id/cancelBtn"
        android:layout_alignEnd="@+id/timePicker" />

</RelativeLayout>
